Bug 103787 - [BDW,BSW] gpu hang on spec.arb_pipeline_statistics_query.arb_pipeline_statistics_query-comp
Summary: [BDW,BSW] gpu hang on spec.arb_pipeline_statistics_query.arb_pipeline_statist...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Kenneth Graunke
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-16 21:30 UTC by Clayton Craft
Modified: 2017-11-17 22:30 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Clayton Craft 2017-11-16 21:30:26 UTC
Bisected to:

8d48671492412e04c18651a779cabacf30ed0afe is the first bad commit
commit 8d48671492412e04c18651a779cabacf30ed0afe
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Tue Nov 14 15:24:36 2017 -0800

    i965: Implement another VF cache invalidate workaround on Gen8+.
Comment 1 Kenneth Graunke 2017-11-17 22:30:23 UTC
I partially reverted this, so we keep it on Gen9+ but drop it on Gen8:

commit a01ba366e01b7d1cdfa6b0e6647536b10c0667ef
Author: Kenneth Graunke <kenneth@whitecape.org>
Date:   Thu Nov 16 22:31:27 2017 -0800

    i965: Revert Gen8 aspect of VF PIPE_CONTROL workaround.
    
    This apparently causes hangs on Broadwell, so let's back it out for now.
    I think there are other PIPE_CONTROL workarounds that we're missing.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=103787

Marking fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.